--- a/Index.Html
+++ b/Index.Html
@@ -6,3 +6,21 @@
 </head>
 <body>
 <div id="header".
+<h1>Meu Currículo</h1>
+</div>
+<div id="main-content">
+<h2>Dados Pessoais</h2>
+<img id="profile-image" scr="caminho_para_a_sua_imagem.jpg" alt="foto de perfil"
+<p>Nome: Seu Nome</p>
+<p>E-mail: seuemail@example.com</p>
+<p>Telefone: (123) 456-7890</p>
+<h2>Experiência Profissional</h2>
+<p>Cargo: Nome da Empresa</p>
+<p>Empresa:Nome da Empresa</p>
+<p>Descrição: Descrição das responsabilidades e realizações no cargo.</p>
+<h2> Formação Acadêmica</h2>
+<p>Curso: Nome da Instituição</p>
+<p>Ano de conclusão:20XX</p>
+</div>
+</body>
+</html>
